[gd_scene load_steps=8 format=3 uid="uid://dh7tea1abmm2v"]

[ext_resource type="Script" uid="uid://dvfcgds0yhqnf" path="res://main/control_panel/control_panel.gd" id="1_ae7nu"]
[ext_resource type="Texture2D" uid="uid://bk1rgby8bl2hr" path="res://icon/FirstStepIcon.png" id="2_6o8q7"]
[ext_resource type="Texture2D" uid="uid://ddywix2exwiqj" path="res://icon/PreviousStepIcon.png" id="3_skyhj"]
[ext_resource type="Texture2D" uid="uid://cq7wxo0lrln85" path="res://icon/RunIcon.png" id="4_8bc1i"]
[ext_resource type="Texture2D" uid="uid://clddh03pvcxm" path="res://icon/PauseIcon.png" id="5_dyn08"]
[ext_resource type="Texture2D" uid="uid://bpyahsp2glp5p" path="res://icon/NextStepIcon.png" id="6_tiws8"]
[ext_resource type="Texture2D" uid="uid://bjgdddepwt02c" path="res://icon/LastStepIcon.png" id="7_kl0sn"]

[node name="VBoxContainer" type="VBoxContainer"]
script = ExtResource("1_ae7nu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"DetailPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PlayerControlPanel" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"DetailPanel"

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PlayerControlPanel"]
layout_mode = 2

[node name="VBoxContiner" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PlayerControlPanel/HBoxContainer"]
layout_mode = 2

[node name="FirstStepButton" type="Button" parent="PanelContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Go to first step"
focus_mode = 0
icon = ExtResource("2_6o8q7")
icon_alignment = 1
expand_icon = true

[node name="PreviousStepButton" type="Button" parent="PanelContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Go to previous step"
focus_mode = 0
icon = ExtResource("3_skyhj")
icon_alignment = 1
expand_icon = true

[node name="RunButton" type="Button" parent="PanelContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Play from current step"
focus_mode = 0
icon = ExtResource("4_8bc1i")
icon_alignment = 1
expand_icon = true

[node name="PauseButton" type="Button" parent="PanelContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 5
tooltip_text = "Pause playing"
focus_mode = 0
disabled = true
icon = ExtResource("5_dyn08")
icon_alignment = 1
expand_icon = true

[node name="NextStepButton" type="Button" parent="PanelContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 5
tooltip_text = "Go to next step"
focus_mode = 0
icon = ExtResource("6_tiws8")
icon_alignment = 1
expand_icon = true

[node name="LastStepButton" type="Button" parent="PanelContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 5
tooltip_text = "Go to last step"
focus_mode = 0
icon = ExtResource("7_kl0sn")
icon_alignment = 1
expand_icon = true

[node name="CurrentStepSlider" type="HSlider" parent="PanelContainer/HBoxContainer/PlayerControlPanel/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Current step"
focus_mode = 0
value = 20.0
rounded = true
ticks_on_borders = true

[node name="LoadProgressBar" type="ProgressBar" parent="PanelContainer/HBoxContainer/PlayerControlPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Loading progress"
value = 3.6
show_percentage = false

[node name="StepInfoPanel" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = -6

[node name="CurrentStepLabel" type="Label" parent="PanelContainer/HBoxContainer/StepInfoPanel"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"GridHeaderLabel"
text = "Step"

[node name="CurrentStepValue" type="Label" parent="PanelContainer/HBoxContainer/StepInfoPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"StepsLabel"
text = "9999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/StepInfoPanel"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NumStepsLabel" type="Label" parent="PanelContainer/HBoxContainer/StepInfoPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"GridHeaderLabel"
text = "of"

[node name="NumStepsValue" type="Label" parent="PanelContainer/HBoxContainer/StepInfoPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"GridHeaderLabel"
text = "9999"

[node name="ViewSettingsPanel" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"DetailPanel"

[node name="GridContainer" type="GridContainer" parent="ViewSettingsPanel"]
layout_mode = 2
columns = 2

[node name="NumStepsLabel" type="Label" parent="ViewSettingsPanel/GridContainer"]
layout_mode = 2
theme_type_variation = &"GridHeaderLabel"
text = "Steps:"

[node name="NumStepsSlider" type="HSlider" parent="ViewSettingsPanel/GridContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Speed of playback"
focus_mode = 0
min_value = 10.0
max_value = 5000.0
step = 10.0
value = 500.0
rounded = true
ticks_on_borders = true

[node name="GridSizeLabel" type="Label" parent="ViewSettingsPanel/GridContainer"]
layout_mode = 2
theme_type_variation = &"GridHeaderLabel"
text = "Size:"

[node name="GridSizeSlider" type="HSlider" parent="ViewSettingsPanel/GridContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Speed of playback"
focus_mode = 0
min_value = 2.0
max_value = 15.0
value = 5.0
rounded = true
ticks_on_borders = true

[node name="RunSpeedLabel" type="Label" parent="ViewSettingsPanel/GridContainer"]
layout_mode = 2
theme_type_variation = &"GridHeaderLabel"
text = "Speed:"

[node name="RunSpeedSlider" type="HSlider" parent="ViewSettingsPanel/GridContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Speed of playback"
focus_mode = 0
min_value = 1.0
max_value = 1000.0
value = 250.0
ticks_on_borders = true
